--- a/assets/table.html
+++ b/assets/table.html
@@ -1,4 +1,20 @@
 <table border="1" class="dataframe">
+  <colgroup>
+    <col style="width: 100px;">
+    <col>
+    <col>
+    <col>
+    <col>
+    <col>
+    <col>
+    <col>
+    <col>
+    <col>
+    <col>
+    <col>
+    <col>
+    <col>
+  </colgroup>
   <thead>
     <tr style="text-align: right;">
       <th>name</th>
@@ -8,14 +24,14 @@
       <th>submitted</th>
       <th>tags</th>
       <th>n_steps</th>
-      <th>steps</th>
-      <th>description</th>
-      <th>ingredients</th>
+      <th style="width: 100px;">steps</th>
+      <th style="width: 100px;">description</th>
+      <th style="width: 100px;">ingredients</th>
       <th>n_ingredients</th>
       <th>user_id</th>
       <th>date</th>
       <th>rating</th>
-      <th>review</th>
+      <th style="width: 100px;">review</th>
       <th>avg_rating</th>
       <th>calories (#)</th>
       <th>total fat (PDV)</th>
